--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,8 @@ typings/
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+# nest.js build output
+*/dist
 
 # MacOS
 .DS_Store
