--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
-    "start:hmr": "node dist/server",
+    "start:hmr": "LOGGER_LEVEL=debug node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
