--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,6 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strictNullChecks": true,
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
