--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^5.3.6",
     "@nestjs/core": "^5.3.6",
     "@types/uuid": "^3.4.4",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.9.1",
     "log4js": "^3.0.5",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
