--- a/api/package.json
+++ b/api/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^5.3.6",
     "@nestjs/core": "^5.3.6",
-    "@types/uuid": "^3.4.4",
+    "@nestjs/typeorm": "^5.2.1",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
     "log4js": "^3.0.5",
+    "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.7",
     "typescript": "^3.0.1",
     "uuid": "^3.3.2"
   },
@@ -37,6 +39,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
+    "@types/uuid": "^3.4.4",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
