--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,12 @@
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
-    "start:hmr": "LOGGER_LEVEL=debug node dist/server",
+    "start:hmr": "ENV_NAME=dev LOGGER_LEVEL=debug node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./e2e/jest-e2e.json",
+    "test:e2e": "ENV_NAME=test jest --config ./e2e/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -25,6 +25,8 @@
     "@nestjs/typeorm": "^5.2.1",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
+    "dotenv": "^6.0.0",
+    "joi": "^13.6.0",
     "log4js": "^3.0.5",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
@@ -35,8 +37,10 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^5.3.1",
+    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/joi": "^13.4.5",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "@types/uuid": "^3.4.4",
