add build post shell

--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "postbuild:prod": "sh bin/replaceEnvVariables.sh",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
