Add sources for SSR.

--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,11 @@
     "build": "ng build",
     "build:prod": "ng build --prod",
     "postbuild:prod": "sh bin/replaceEnvVariables.sh",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "postbuild:ssr": "sh bin/replaceEnvVariables.sh",
+    "serve:ssr": "node dist/server",
+    "build:client-and-server-bundles": "ng build --prod && ng run front:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,12 +26,16 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.9",
     "@angular/router": "^6.1.0",
+    "@nguniversal/express-engine": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "core-js": "^2.5.4",
     "flatpickr": "^4.5.2",
     "moment": "^2.22.2",
     "ng2-flatpickr": "^6.0.2",
     "rxjs": "~6.2.0",
+    "ts-loader": "^5.2.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -48,6 +57,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~2.9.2",
+    "webpack-cli": "^3.1.1"
   }
 }
